# stellar-poe

./: .gitlab-ci.yml  README.md  manage.py  pyproject.toml
config/: urls.py  wsgi.py
config/settings/: base.py  prod.py
stellar_poe/: views.py
stellar_poe/stellar/: utils.py
stellar_poe/templates/: base.html  home.html  login.html
stellar_poe/templates/transactions/: transaction-create.html  transaction-detail.html  transaction-list.html
stellar_poe/templates/users/: profile.html  signup.html
stellar_poe/transactions/: admin.py  forms.py  models.py  urls.py  views.py
stellar_poe/transactions/migrations/: 0001_initial.py
stellar_poe/users/: admin.py  forms.py  models.py  urls.py  views.py
stellar_poe/users/migrations/: 0001_initial.py  0002_auto_20181226_2104.py
stellar_poe/users/tests/: test_models.py
